Add groups,dataserver according to the group management

--- a/conf/dataserverd.conf
+++ b/conf/dataserverd.conf
@@ -1,6 +1,7 @@
 #dataseverd.conf
 base.path=/home/linlw/workspace/lfs/test
-volume.name=g1
+group=g1
+volume.name=v1
 logger.level=DEBUG
 logger.file.name=dataserverd
 bind.addr=192.168.1.3
