--- a/conf/trackerd.conf
+++ b/conf/trackerd.conf
@@ -11,6 +11,6 @@ thread.stack.size=524288
 #256 * 1024
 conn.buffer.size=4096
 work.threads=4
-crawler.thread.interval=10
+heart.beat.interval=30
 snapshot.thread.interval=30
 
