--- a/conf/dataserverd.conf
+++ b/conf/dataserverd.conf
@@ -1,6 +1,6 @@
 #dataseverd.conf
 base.path=/home/linlw/workspace/lfs/test
-group=g1
+group.name=g1
 volume.name=v1
 logger.level=DEBUG
 logger.file.name=dataserverd
@@ -32,5 +32,5 @@ block.sub.count=8
 block.max.file.count=256
 block.free.size.ratio=0.15
 weight=1
-tracker.servers=192.168.1.2:2985
+tracker.servers=192.168.1.2:2985|192.168.1.3:2983
 
