modify the large file upload and sync bug

--- a/conf/dataserverd.conf
+++ b/conf/dataserverd.conf
@@ -11,6 +11,7 @@ heart.beat.interval=30
 sync.report.interval=40
 sync.wait.time=100
 sync.interval=40
+binlog.flush.interval=30
 state.report.interval=60
 block.vfs.interval=30
 block.snapshot.interval=30
@@ -32,5 +33,6 @@ block.sub.count=8
 block.max.file.count=256
 block.free.size.ratio=0.15
 weight=1
+file.fsync.written.bytes=2048
 tracker.servers=192.168.1.2:2985|192.168.1.3:2983
 
